# HeartDiseasePredictor

./: Makefile  README.md  environment.yml  pyproject.toml
notebooks/: 1. Data Wrangling.ipynb  2. EDA.ipynb  3. Pre-processing and Training Data Development.ipynb  4. Modeling.ipynb  BeautifulSoup.ipynb  Data Wrangling.ipynb  Modeling.ipynb  Untitled.ipynb
