[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "heart_disease_predictor"
version = "0.0.1"
description = "Heart Disease Predictor using Survey Data Retrieved from the CDC"
authors = [
  { name = "Danny H" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["heart_disease_predictor"]
force_sort_within_sections = true
